# all_included_deep_research

./: .dockerignore  .env.example  .gitignore  AGENT_LOGIC.md  CHANGES.md  CHAT_SEARCH_IMPLEMENTATION.md  FRONTEND_CHAT_SEARCH.md  LEGACY_CLEANUP_REPORT.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  VERIFICATION_STATUS.md  WORKFLOW_DOCUMENTATION.md  docker-compose.yml  test_api.sh  test_project.sh
backend/: .env.backup  .env.example  Dockerfile  FILES_CREATED.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  STATUS_REPORT.md  alembic.ini  entrypoint.sh  pyproject.toml  run_all_real_tests.sh  test_2_web_search.py  test_3_deep_search.py  test_all_real_llm.py  test_openrouter.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_chat_message_embedding.py  003_add_research_sessions.py  004_extend_chat_messages.py
backend/cursor_docks/: context_data_verification.md  deep_research_result_logic.md  message_flow.md  mode_isolation_logic.md
backend/scripts/: check_imports.py  migrate_to_sqlite.py  run_all_tests.py  verify_structure.py
backend/src/: __main__.py  main.py
backend/src/api/: __init__.py  app.py  socketio_server.py
backend/src/api/models/: __init__.py  chat.py  config.py  health.py  memory.py  research.py
backend/src/api/routes/: __init__.py  chat.py  chat_stream.py  chats.py  config.py  health.py  memory.py  research.py
backend/src/chat/: __init__.py  search.py  service.py
backend/src/config/: logging_config.py  modes.py  settings.py
backend/src/database/: connection.py  connection_sqlite.py  models.py  schema.py  schema_sqlite.py
backend/src/embeddings/: base.py  cohere_provider.py  factory.py  huggingface_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py
backend/src/llm/: __init__.py  factory.py  mock.py  provider_abstraction.py
backend/src/memory/: agent_file_service.py  agent_memory_service.py  agent_session.py  chunking.py  file_manager.py  hybrid_search.py  index_manager.py  manager.py  repository.py  session_memory_service.py  sync_service.py  vector_store_adapter.py
backend/src/memory/models/: chunk.py  memory.py  search.py
backend/src/models/: agent_models.py  schemas.py
backend/src/search/: base.py  factory.py  mock_provider.py  models.py  reranker.py  scraper.py  searxng_provider.py  tavily_provider.py
backend/src/streaming/: __init__.py  socketio_stream.py  sse.py
backend/src/utils/: chat_history.py  date.py  pdf_generator.py  text.py
backend/src/workflow/: __init__.py  balanced_research.py  factory.py  quality_research.py  speed_research.py  state.py
backend/src/workflow/agentic/: coordinator.py  models.py  researcher.py  schemas.py  supervisor.py
backend/tests/: test_1_classifier.py  test_all_real_llm.py  test_basic.py  test_openrouter.py  test_openrouter_simple.py
backend/tests/e2e/: test_rest_socketio_api.py  test_search_modes.py  test_user_flow.py
backend/tests/integration/: test_basic_integration.py
backend/tests/mocks/: __init__.py  mock_llm.py  mock_scraper.py  mock_search.py
(+122 files in other folders)
