[project]
name = "all-included-deep-research"
version = "1.0.0"
description = "Comprehensive deep research system with memory integration"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    # FastAPI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-socketio[asyncio]==5.16.0",
    "python-engineio==4.13.0",

    # LangChain & LangGraph
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",

    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",  # SQLite async support

    # Vector stores
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",

    # Pydantic
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # AI/ML
    "openai>=1.10.0",
    "tiktoken>=0.5.2",

    # Search & Scraping
    "tavily-python>=0.3.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.11.6",
    "pypdf>=3.17.0",
    
    # PDF Generation
    "reportlab>=4.0.0",
    "markdown>=3.5.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1.0"]
cohere = ["cohere>=4.47"]
huggingface = [
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
]
playwright = ["playwright>=1.40.0"]
all = [
    "all-included-deep-research[ollama,cohere,huggingface,playwright]"
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=23.12.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
